methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:10: error: type mismatch;
 found   : Unit
 required: Boolean
  for(o <- 1 to 6){
        ^